tests/compile_fail_tests/array_with_dynamic_size/main.cpp
#include "fst/array.h"

int main(int argc, char* argv[])
{
    fst::unused(argc, argv);
    fst::array<int, fst::dynamic_size> arr;
    return 0;
}